Edited wiki page through web user interface.

--- a/wiki/FunctionList.wiki
+++ b/wiki/FunctionList.wiki
@@ -23,8 +23,8 @@
    * 入荷実績 受信
    * 棚卸 受信
    * 棚卸計画 送信
-   * 配送計画 送信
-   * 補充指示 送信
+   * 配送計画 送信 ?
+   * 補充指示 送信 ?
 
  * シミュレーション
    * 出荷作業
@@ -43,6 +43,7 @@
    * 棚卸機器 データ受信
    * 棚卸調整入力
    * 棚卸差異表印刷
+   * 棚卸D送信
 
  * 出荷
    * ラベルプリンタ ラベル印刷指示
@@ -61,10 +62,6 @@
 
  * 倉庫マネジメント
    * 進捗管理
-   * 在庫管理(欠品、補充指示)
+   * 発注管理(欠品、補充指示)
    * システム障害モニタ
    * 障害対応(再処理、再送信、再受信)
-
- * 補充
-
- * 配送
