Edited wiki page through web user interface.

--- a/wiki/FunctionList.wiki
+++ b/wiki/FunctionList.wiki
@@ -15,7 +15,7 @@
    * 不足商品リスト作成
  * 出荷指示(データ作成)
 
- * EDIサーバ連携 EdiDesign
+ * EDIサーバ連携 [EdiDesign EDIに関する設計メモ]
    * 受注 受信
    * 出荷指示 送信
    * 出荷実績 受信
