Edited wiki page through web user interface.

--- a/wiki/EdiDesign.wiki
+++ b/wiki/EdiDesign.wiki
@@ -1,1 +1,51 @@
 #summary EDIサーバ、顧客、クラウドセンタとのデータ連携に関する機能記述
+
+{{{
+---------
+出荷指示
+---------
+ K 出荷管理番号
+ K 管理行番号
+ * ロケーション
+ * 商品コード
+ * 配送先コード
+ * 作業指示コード // システム利用。ルートと作業の組み合わせだったり。
+ * 指示数(ケース) // outer carton 
+ * 指示数(バラ) // inner carton ?
+ * 実績数(ケース)
+ * 実績数(バラ)
+ * 作業者
+ * 作業開始
+ * 作業終了
+ * 商品名  // これ移行の項目は単なる表示項目。xmlで一括提供でもよいかも。
+ * 配送先名
+ * 備考
+
+----------
+入荷指示
+----------
+ K 入荷管理番号
+ K 管理行番号
+ * 商品識別コード // 言ってみたかった。商品コード
+ * 入荷予定数
+ * 入荷実績数
+ * 格納場所(ロケーション)
+ * 登録者
+ * 備考    // これ以降は単なる表示項目
+ * 商品名
+
+-----------
+棚卸在庫
+-----------
+ K ロケーション
+ K 商品コード
+ * システム在庫数
+ * 実在庫数
+ 
+-----------
+利用者
+-----------
+ K 利用者コード(ID)
+ (これは認証システムの構造に依存)
+
+}}}
