Edited wiki page through web user interface.

--- a/wiki/EdiDesign.wiki
+++ b/wiki/EdiDesign.wiki
@@ -1,5 +1,28 @@
 #summary EDIサーバ、顧客、クラウドセンタとのデータ連携に関する機能記述
-= データ種別 =
+= EDIシステム =
+== データ種別 ==
+=== 送信 ===
+* 出荷指示
+* 入荷指示
+* 棚卸計画
+
+=== 受信 ===
+* 注文 -- 随時
+* 出荷実績
+* 入荷実績
+* 棚卸実績
+
+{{{
+ ユーザ        EDIサーバ(HUBサーバ)       クラウドセンタ
+ =========================================================
+ 注文 -------> 注文(バッチ） -----------> 注文
+                                          [引当、指示データ作成]
+               出荷指示      <----------- 出荷指示
+
+ロジデバイス
+============
+[作業] <------ 出荷指示(プロトコル変換)
+}}}
 
 = EDIサーバ側 データベース =
 {{{
