Edited wiki page through web user interface.

--- a/wiki/EdiDesign.wiki
+++ b/wiki/EdiDesign.wiki
@@ -1,4 +1,6 @@
 #summary EDIサーバ、顧客、クラウドセンタとのデータ連携に関する機能記述
+#sidebar TableOfContents
+
 = EDIシステム =
 == データ種別 ==
 === 送信 ===
@@ -12,6 +14,7 @@
  * 入荷実績
  * 棚卸実績
 
+*図:注文データ処理*
 {{{
  ユーザ        EDIサーバ(HUBサーバ)       クラウドセンタ
  =========================================================
