--- a/trunk/wcamp/config/locales/ja.yml
+++ b/trunk/wcamp/config/locales/ja.yml
@@ -202,3 +202,6 @@ ja:
         goods_name: "商品"
         delivery_name: "配送先"
         comment: "備考"
+        order_lines: "出荷行数"
+        status: "状態"
+        device: "物流機器"
