--- a/wcamp/config/locales/ja.yml
+++ b/wcamp/config/locales/ja.yml
@@ -167,6 +167,8 @@ ja:
         waacs_code: "waacs_code"  
         goods_code: "商品コード"
         location: "ロケーション"
+        lot_no: "ロット#"
+        expire_on: "賞味期限"
         announced_qty: "予定数" 
         result_qty: "結果数" 
         user_code: "ユーザコード" 
@@ -235,6 +237,8 @@ ja:
         waacs_code: "WAACSコード"  
         goods_code: "商品コード"
         location: "ロケーション"
+        lot_no: "ロット#"
+        expire_on: "賞味期限"
         announced_qty: "予定数" 
         result_qty: "結果数" 
         user_code: "ユーザコード" 
