--- a/trunk/wbirdfarm/config/locales/translation_ja.yml
+++ b/trunk/wbirdfarm/config/locales/translation_ja.yml
@@ -8,6 +8,7 @@ ja:
       shipping_address: "配送先"
       ware_house: "倉庫"
       user: "登録者"
+      edi_file: "電子データ交換"
 
     attributes: 
       good: 
@@ -141,8 +142,19 @@ ja:
         shipping_addresses: "配送先"
 
       edi:
+        ware_house: "物流倉庫"
         class_name: "種別"
         lines: "行"
         status: "ステータス"
         last_edi_at: "最新実行時刻"
         rake_name: "手動実施"
+
+      edi_file: 
+        ware_house: "物流倉庫"
+        class_name: "種別"
+        edi_code: "ファイルID"
+        file_path: "EDIファイル"
+        edi_at: "実行時刻"
+        edi_at: "実行時刻"
+        device: "物流機器"
+        show_status: "ステータス"
