Edited wiki page PreIssueTodo through web user interface.

--- a/wiki/PreIssueTodo.wiki
+++ b/wiki/PreIssueTodo.wiki
@@ -1,7 +1,7 @@
 #summary チケット発行前のタスク覚書
-= Waacs Birdfarm =
+= WAACS Birdfarm =
  * 営業マン用のアカウントを作る。営業マン権限を用意。現在、Admin 、User
- * テストユーザ worker/test123
+ * memo テストユーザ worker/test123
  * ユーザでの所属倉庫変更は、制限する。
  * ユーザの権限変更をプロファイルで変更するには。
  * Edi.receive_order 注文受信時の処理 の最終化。
@@ -14,4 +14,22 @@
  * pdf 在庫帳
  * pdf ピッキングリスト （トータル、シングル）
  * システム管理のトップメニューの文字の大きさを整える。
+
+ * total picking で、zzz をfeeding list に反映させるか、どうか
+ * 不足在庫、補充必要在庫 一覧の別出力
+ * work_no マスタあるいは、そのためのクラス
+ * Edi Fileのcampとの取扱の違いについて整理
+ * リポート内容の調整
+ * memo Edi File クラス. tagを持ち、ファイルのコントロールを行なう。
+ * 定数 Col配列を、メソッド内で使う。リファクタリング。
+ * allocate_statusの説明記述
+ * panel用のcss highlightが上手くいかない
+ * 商品優先引当ロジック
+ * 在庫が無いオーダの例も用意する
+
+= WAACS Camp = 
+ * エラー処理、エラー表示
+ * 出力ファイル行数の表示
+ * 検品済表示、完了ははずす。管理者の場合は、表示。
+ * 監視画面に入荷一覧も
  
