Edited wiki page PreIssueTodo through web user interface.

--- a/wiki/PreIssueTodo.wiki
+++ b/wiki/PreIssueTodo.wiki
@@ -27,6 +27,12 @@
  * 商品優先引当ロジック
  * 在庫が無いオーダの例も用意する
 
+ * 本引当のデザイン
+ * wcampとの連携のデザインについて、最終化と実装。
+ * EOS オーダ処理についてのロジック記述。
+ * delayed_jobによるバックグラウンドジョブの実行。
+ * 仮置ロケーションの設定と記載。
+
 = WAACS Camp = 
  * エラー処理、エラー表示
  * 出力ファイル行数の表示
