Edited wiki page PreIssueTodo through web user interface.

--- a/wiki/PreIssueTodo.wiki
+++ b/wiki/PreIssueTodo.wiki
@@ -33,6 +33,8 @@
  * delayed_jobによるバックグラウンドジョブの実行。
  * 仮置ロケーションの設定と記載。
 
+ * max_num , min_num の入力ミスを防ぐためのvalidationをつける
+
 = WAACS Camp = 
  * エラー処理、エラー表示
  * 出力ファイル行数の表示
