--- a/wiki/PreIssueTodo.wiki
+++ b/wiki/PreIssueTodo.wiki
@@ -6,24 +6,24 @@
  * ユーザの権限変更をプロファイルで変更するには。
  * Edi.receive_order 注文受信時の処理 の最終化。
  * Picking Plan.allocate_total, single の最終化。
- * show_xx_list のEDIファイル出力とPdfファイル出力。
+ * ~~ show_xx_list のEDIファイル出力とPdfファイル出力。 ~~
  * 在庫照会での受払情報表示。
  * どのオーダがどこに引き当てられているかをみたい。
  * ピッキング計画の画面デザイン 最終化。
  * 営業マンの注文登録と通常の登録を別扱いにする。
  * pdf 在庫帳
- * pdf ピッキングリスト （トータル、シングル）
- * システム管理のトップメニューの文字の大きさを整える。
+ * ~~ pdf ピッキングリスト （トータル、シングル） ~~
+ * ~~ システム管理のトップメニューの文字の大きさを整える。 ~~
 
  * total picking で、zzz をfeeding list に反映させるか、どうか
  * 不足在庫、補充必要在庫 一覧の別出力
- * work_no マスタあるいは、そのためのクラス
+ * ~~ work_no マスタあるいは、そのためのクラス ~~
  * Edi Fileのcampとの取扱の違いについて整理
- * リポート内容の調整
+ * ~~ リポート内容の調整 ~~
  * memo Edi File クラス. tagを持ち、ファイルのコントロールを行なう。
  * 定数 Col配列を、メソッド内で使う。リファクタリング。
  * allocate_statusの説明記述
- * panel用のcss highlightが上手くいかない
+ * ~~ panel用のcss highlightが上手くいかない ~~
  * 商品優先引当ロジック
  * 在庫が無いオーダの例も用意する
 
