Edited wiki page PreIssueTodo through web user interface.

--- a/wiki/PreIssueTodo.wiki
+++ b/wiki/PreIssueTodo.wiki
@@ -35,6 +35,8 @@
 
  * max_num , min_num の入力ミスを防ぐためのvalidationをつける
 
+ * pdfトータルピッキングリスト リストの並べ方、集計、欠品の表示順の制御
+
 = WAACS Camp = 
  * エラー処理、エラー表示
  * 出力ファイル行数の表示
