Edited wiki page PreIssueTodo through web user interface.

--- a/wiki/PreIssueTodo.wiki
+++ b/wiki/PreIssueTodo.wiki
@@ -10,7 +10,7 @@
  * ~~ show_xx_list のEDIファイル出力とPdfファイル出力。 ~~
  * 在庫照会での受払情報表示。
     * どのオーダがどこに引き当てられているかをみたい。
- ~~ * ピッキング計画の画面デザイン 最終化。 ~~
+ * ~~ ピッキング計画の画面デザイン 最終化。 ~~
  * pdf 在庫帳
     * 不足在庫、補充必要在庫 一覧の別出力
  * ~~ pdf ピッキングリスト （トータル、シングル） ~~
@@ -27,8 +27,8 @@
  * 商品優先引当ロジック
  * 在庫が無いオーダの例も用意する
 
- * 本引当のデザイン
- * wcampとの連携のデザインについて、最終化と実装。
+ * ~~ 本引当のデザイン ~~
+ * ~~ wcampとの連携のデザインについて、最終化と実装。 ~~
  * EOS オーダ処理についてのロジック記述。
  * delayed_jobによるバックグラウンドジョブの実行。
  * 仮置ロケーションの設定と記載。
