Edited wiki page WorkStatusControl through web user interface.

--- a/wiki/WorkStatusControl.wiki
+++ b/wiki/WorkStatusControl.wiki
@@ -8,8 +8,8 @@
 
 == 工程ステータス ==
 || 10 || 未作業 || null, スペースも含む ||
-|| 20 || 作業中 || ||
-|| 30 || 作業済 || ||
-|| 40 || 検品中 || ||
-|| 50 || 検品済 || ||
+|| 20 || 作業中 || カート、HHTにダウンロードされた場合 ||
+|| 30 || 作業済 || ピッキング作業の完了 ||
+|| 40 || 検品中 || 検品システムで呼び出し ||
+|| 50 || 検品済 || 検品完了 ||
 || 90 || 完了 || 実績ファイルとして出力完了 ||
